# karl

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  KARL_V6_ARCHITECTURE.md  KARL_V7_HANDOFF.md  README.md  advantage_experiment.py  karl-comparison-experiment.py  monitor_sessions.sh  pyproject.toml  twin_conversation.py  twin_opinions.py  twin_session_driver.py  v7-knowledge-injection.md  v7-model-benchmark.json  v7-mohamed-exemplars.json
.github/workflows/: ci.yml
docs/: architecture.md  configuration.md  deployment.md
examples/: sample_trajectory.json
karl/: __init__.py  ablation_results.json  agentic_synth.py  bootstrap.py  bootstrap_skill_embeddings.py  cli.py  comparison_results.json  config.json  config.py  cortex_karl_bridge.py  embedding_cache.py  entity_bridge.py  evaluator.py  extractor.py  flow_sampler.py  flows.py  generate_status.py  karl_analysis_flow.py  karl_cli.py  karl_cron.py  karl_trainer.py  karl_training_flow.py  mega_extract.py  metrics_exporter.py  notifications.py  plasticity_manager.py  process_fingerprint.py  reward_engine.py  rl2f_data_builder.py  sft_dispatch.py  sft_exporter.py  sft_launcher.py  shadow_seeder.py  synthetic_qa.py  synthetic_qa_generator.py  trainer.py  trajectories.jsonl  trajectory_bridge.py  trajectory_diversity.py  trajectory_extractor.py  (+5 more)
karl/v6/: __init__.py  anti_repeat.py  context_stack.py  driver.py  phase_prompts.py  project_context.py  session_state.py  terminal_parser.py
karl/v7/: __init__.py  agent_roleplay.py  curate_training_data.py  dpo_generator.py  (+7 more)
paper/: behavioral-motifs-paper.md  karl-paper.md
tests/: test_cli.py  test_embedding_cache.py  test_entity_bridge.py  test_integration.py  test_reward_engine.py  test_sft_exporter.py  test_trajectory_bridge.py  test_trajectory_tap.py  test_weight_updater.py
vastai/: deploy_v5_mac5.sh  evaluate.py  gen_eval_instruct.json  gen_eval_results.json  prepare_karl_data.py  prepare_v7_data.py  requirements.txt  run_karl.sh  run_v7.sh  train.py
(+19 files in other folders)
